practise/m2/Bonus Assignment/testcases_output.txt
########## Testcase 0: Failed ##########
Expected Output: 
2297

Your Output: 
  File "sol.py", line 32
    print minimal_path_sum('matrix.txt')
                         ^
SyntaxError: invalid syntax
----------------------------------------

########## Testcase 1: Failed ##########
Expected Output: 
2040

Your Output: 
  File "sol.py", line 32
    print minimal_path_sum('matrix.txt')
                         ^
SyntaxError: invalid syntax
----------------------------------------

########## Testcase 2: Failed ##########
Expected Output: 
7858

Your Output: 
  File "sol.py", line 32
    print minimal_path_sum('matrix.txt')
                         ^
SyntaxError: invalid syntax
----------------------------------------

########## Testcase 3: Failed ##########
Expected Output: 
1399000000000

Your Output: 
  File "sol.py", line 32
    print minimal_path_sum('matrix.txt')
                         ^
SyntaxError: invalid syntax
----------------------------------------

